--- a/public/index.html
+++ b/public/index.html
@@ -25,15 +25,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <!---Google Analytics Tag-->
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZZQ79WB6NR"></script>
+   <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TYQ1TRSPHJ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-ZZQ79WB6NR');
+  gtag('config', 'G-TYQ1TRSPHJ');
 </script>
 
 <!-- Google Tag Manager -->
