--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,11 @@
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
 
-
+  <form name="test" netlify netlify-honeypot="bot-field" hidden>
+    <input type="text" name="name" />
+    <input type="email" name="email" />
+    <textarea name="message"></textarea>
+  </form>
   
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
