--- a/public/index.html
+++ b/public/index.html
@@ -70,5 +70,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <footer>
+      <script type="text/javascript">
+document.write(new Date().getFullYear());
+      </script>
+    </footer>
   </body>
 </html>
