--- a/public/index.html
+++ b/public/index.html
@@ -49,19 +49,15 @@
 
     <title> Susan Wairimu</title>
   </head>
-  <body>
+  <body oncontextmenu="return false" >
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T2BL2D7"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
 
-  <form name="test" netlify netlify-honeypot="bot-field" hidden>
-    <input type="text" name="name" />
-    <input type="email" name="email" />
-    <textarea name="message"></textarea>
-  </form>
   
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+  
+  <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
